modified bucket name on properties.json

--- a/pyflink-examples/KafkaSSLConnectorFileSink/application_properties.json
+++ b/pyflink-examples/KafkaSSLConnectorFileSink/application_properties.json
@@ -23,7 +23,7 @@
   {
     "PropertyGroupId": "producer.config.0",
     "PropertyMap": {
-      "output.bucket.name": "aaaaa"
+      "output.bucket.name": "<s3 bucket>"
     }
   }
 ]
