--- a/packaging/make-flat-jar/pom.xml
+++ b/packaging/make-flat-jar/pom.xml
@@ -34,7 +34,16 @@
             <artifactId>kafka-clients</artifactId>
             <version>3.3.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.8.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.10</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
